table overflow fix attempt 2

--- a/themes/whodathunk-theme/assets/css/main.css
+++ b/themes/whodathunk-theme/assets/css/main.css
@@ -33,6 +33,7 @@ td {
     /*align-items: left;*/
     border-collapse: collapse;
     overflow: auto;
+    background-color: red;
 }
 
 header {
